Modified Vagrantfile to have RAM/CPU specified and to create databases in Postgres if they don't already exist. Modified tests to use separate web instance and re-use existing postgres instance. Modified docker-compose yml files to install gems.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   web:
     build: .
-    command: bash -c "./wait-for-it.sh neo4j:7474 -- bundle exec rails s"
+    command: bash -c "./wait-for-it.sh neo4j:7474 -- bundle install; bundle exec rails s"
     volumes:
       - ./app:/app
     ports:
