--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,7 +51,7 @@ services:
 
   web:
     build: .
-    command: bash -c "./wait-for-it.sh neo4j:7474 -- bundle exec rails s"
+    command: bash -c "./wait-for-it.sh neo4j:7474 -- bundle install; bundle exec rails s"
     ports:
       - "3000:3000"
     volumes:
