Stock implementation of Auth0

--- a/app/Gemfile
+++ b/app/Gemfile
@@ -44,3 +44,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # Neo4j for graph, postgres for templates
 gem 'neo4j', '~> 8.0.0'
 gem 'pg', '0.18.4'
+
+# JWT for Auth0
+gem 'jwt'
