Opened neo4j ports in docker-compose for debugging purposes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,8 @@ services:
   neo4j:
     image: neo4j:3.2
     restart: unless-stopped
+    ports:
+      - "7474:7474"
+      - "7687:7687"
     environment:
       NEO4J_AUTH: none
