Updated Gemfile and Readme, including updating neo4j gem, including the neo4j-rake_tasks gem now that it is not bundled with neo4j-core, fixing minitest version at 5.10 to avoid crashing bug when one tests fails in 5.11, and adding more detailed Readme instructions.

--- a/app/Gemfile
+++ b/app/Gemfile
@@ -42,8 +42,12 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 # Neo4j for graph, postgres for templates
-gem 'neo4j', '~> 8.0.0'
+gem 'neo4j', '~> 9.2.4'
+gem 'neo4j-rake_tasks', '~> 0.7.19'
 gem 'pg', '0.18.4'
 
 # JWT for Auth0
 gem 'jwt'
+
+# Bug in 5.11 where one test failure stops running all tests
+gem 'minitest', '~> 5.10.3'
