--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,7 +51,7 @@ services:
 
   web:
     build: .
-    command: bash -c "./wait-for-it.sh neo4j:7474 -- bundle install; bundle exec rails s"
+    command: bash -c "./wait-for-it.sh neo4j:7474 -- gem install bundler; bundle install; bundle exec rails s"
     ports:
       - "3000:3000"
     volumes:
@@ -73,14 +73,14 @@ services:
       SECRET_KEY_BASE: 70f5e296671ca824ee74324c58cbbcce2f84211b106d23dd655ea9bc31f9a54fa1c2c402bb77caeb9db22f332a8f0f24d089891bf6ee8aba88889324a7101a25
 
   postgres:
-    image: postgres:9.6-alpine
+    image: postgres:10.4-alpine
     restart: unless-stopped
     environment:
       POSTGRES_USER: apix
       POSTGRES_DB: apixdb
 
   neo4j:
-    image: neo4j:3.2
+    image: neo4j:3.4
     restart: unless-stopped
     environment:
       NEO4J_AUTH: none
