Updated docker files for changes after last commit

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -55,7 +55,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./app:/app
+      - ./rails:/rails
     links:
       - postgres
       - neo4j
