--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,8 @@ Style/RaiseArgs:
   Enabled: false
 Style/TernaryParentheses:
   Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
 
 Metrics/ClassLength:
   Enabled: false
